@@ -309,7 +309,8 @@ no-auto-default=*
         </para>
         <para><literal>default</literal>: NetworkManager will update
         <filename>/etc/resolv.conf</filename> to reflect the nameservers
-        provided by currently active connections.</para>
+        provided by currently active connections. The <literal>rc-manager</literal>
+        setting (below) controls how this is done.</para>
         <para><literal>dnsmasq</literal>: NetworkManager will run
         dnsmasq as a local caching nameserver, using "Conditional Forwarding"
         if you are connected to a VPN, and then update
@@ -349,37 +350,57 @@ no-auto-default=*
 
       <varlistentry>
         <term><varname>rc-manager</varname></term>
-        <listitem><para>Set the <filename>resolv.conf</filename>
-        management mode. The default value depends on NetworkManager build
-        options, and this version of NetworkManager was build with a default of
-        "<literal>&NM_CONFIG_DEFAULT_MAIN_RC_MANAGER;</literal>".
-        Regardless of this setting, NetworkManager will
-        always write resolv.conf to its runtime state directory
-        <filename>&nmrundir;/resolv.conf</filename>.</para>
+        <listitem>
+        <para>Set the <filename>resolv.conf</filename>
+          management mode. This option is about how NetworkManager writes to
+          <filename>/etc/resolv.conf</filename>, if at all.
+          The default value depends on NetworkManager build
+          options, and this version of NetworkManager was build with a default of
+          "<literal>&NM_CONFIG_DEFAULT_MAIN_RC_MANAGER;</literal>".
+          Regardless of this setting, NetworkManager will
+          always write its version of resolv.conf to its runtime state directory
+          as <filename>&nmrundir;/resolv.conf</filename>.
+        </para>
+        <para>If you configure <literal>dns=none</literal> or make <filename>/etc/resolv.conf</filename>
+          immutable with <literal>chattr +i</literal>, NetworkManager will ignore this setting and
+          always choose <literal>unmanaged</literal> (below).
+        </para>
+        <para><literal>auto</literal>: if systemd-resolved plugin is configured via
+          the <literal>dns</literal> setting or if it gets detected as main DNS plugin,
+          NetworkManager will update systemd-resolved without touching <filename>/etc/resolv.conf</filename>.
+          Alternatively, if <literal>resolvconf</literal> or <literal>netconfig</literal> are enabled
+          at compile time and the respective binary is found, NetworkManager will automatically use it.
+          Note that if you install or uninstall these binaries, you need to reload the
+          <literal>rc-manager</literal> setting with SIGHUP or
+          <literal>systemctl reload NetworkManager</literal>. As last fallback
+          it uses the <literal>symlink</literal> option (see next).
+        </para>
         <para><literal>symlink</literal>: If <filename>/etc/resolv.conf</filename> is
-        a regular file, NetworkManager will replace the file on update. If
-        <filename>/etc/resolv.conf</filename> is instead a symlink, NetworkManager
-        will leave it alone. Unless the symlink points to the internal file
-        <filename>&nmrundir;/resolv.conf</filename>,
-        in which case the symlink will be updated to emit an inotify notification.
-        This allows the user to conveniently instruct NetworkManager not
-        to manage <filename>/etc/resolv.conf</filename> by replacing it with
-        a symlink.</para>
+          a regular file or does not exist, NetworkManager will write the file directly.
+          If <filename>/etc/resolv.conf</filename> is instead a symlink, NetworkManager
+          will leave it alone. Unless the symlink points to the internal file
+          <filename>&nmrundir;/resolv.conf</filename>,
+          in which case the symlink will be updated to emit an inotify notification.
+          This allows the user to conveniently instruct NetworkManager not
+          to manage <filename>/etc/resolv.conf</filename> by replacing it with
+          a symlink.
+        </para>
         <para><literal>file</literal>: NetworkManager will write
-        <filename>/etc/resolv.conf</filename> as file. If it finds
-        a symlink to an existing target, it will follow the symlink and
-        update the target instead. In no case will an existing symlink
-        be replaced by a file. Note that older versions of NetworkManager
-        behaved differently and would replace dangling symlinks with a
-        plain file.</para>
+            <filename>/etc/resolv.conf</filename> as regular file. If it finds
+            a symlink to an existing target, it will follow the symlink and
+            update the target instead. In no case will an existing symlink
+            be replaced by a file. Note that older versions of NetworkManager
+            behaved differently and would replace dangling symlinks with a
+            plain file.
+        </para>
         <para><literal>resolvconf</literal>: NetworkManager will run
-        resolvconf to update the DNS configuration.</para>
+          resolvconf to update the DNS configuration.</para>
         <para><literal>netconfig</literal>: NetworkManager will run
-        netconfig to update the DNS configuration.</para>
+          netconfig to update the DNS configuration.</para>
         <para><literal>unmanaged</literal>: don't touch
-        <filename>/etc/resolv.conf</filename>.</para>
+          <filename>/etc/resolv.conf</filename>.</para>
         <para><literal>none</literal>: deprecated alias for
-        <literal>symlink</literal>.</para>
+          <literal>symlink</literal>.</para>
         </listitem>
       </varlistentry>
 
