@@ -8,6 +8,14 @@ The API is subject to change and not guaranteed to be compatible
 with the later release.
 USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 
+* Introduce new "rc-manager=auto" setting and make it the default,
+  unless a different default is chosen at compile time.
+  This mode tries to detect "systemd-resolved", "resolvconf", and "netconfig"
+  and chooses the mode that seems most suitable depending on build
+  setting and runtime detection.
+  "resolvconf" and "netconfig" are only considered iff NetworkManager
+  was built with the respective options enabled.
+
 =============================================
 NetworkManager-1.26
 Overview of changes since NetworkManager-1.24
